--- a/my-wave-portal/package.json
+++ b/my-wave-portal/package.json
@@ -17,5 +17,8 @@
     "ethers": "^5.6.9",
     "hardhat": "^2.9.9",
     "harhat": "^1.0.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1"
   }
 }
